<resources>
    <string name="app_name">Quizlet</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu selections -->
    <string name="title_results">Results</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <!-- Preference Titles -->
    <string name="header_quizlet">Quizlet Customize</string>
    <string name="header_theme">Theme</string>

    <!-- Messages Preferences -->
    <string name="title_player_name">Player Name</string>
    <string name="title_email">Email</string>

    <!-- Settings Activity -->
    <string name="title_dark_theme">Dark theme</string>
    <string name="title_patel_theme">Pastel theme</string>
    <string name="title_vibrant_theme">Vibrant theme</string>

    <!-- Main Activity -->
    <string name="title_game">Welcome to our game!</string>
    <string name="questions">Are you ready to test you android studio knowledge?</string>
    <string name="questions_remaining">Questions Remaining</string>

    <!-- Game Completion Activity -->
    <string name="title_game_over">!Game Over!</string>
    <string name="title_game_results">Game Results </string>
    <string name="button_reset">Restart Quizlet</string>

    <!-- About Activity -->
    <string name="button_gurjot">Gurjot</string>
    <string name="button_harshit">Harshit</string>
    <string name="button_manpreet">Manpreet</string>
    <string name="button_viva">Viva</string>
    <string name="title_dynamic_developers">Dynamic Developers Team</string>
    <string name="title_learn_more">Choose a Developer to learn more!</string>

    <!-- Notification Services -->
    <string name="notification_title">Hey Quizleter</string>
    <string name="notification_message">Continue playing! You\'re almost there</string>

    <!-- Sync Preferences -->
    <string name="title_theme">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>