<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_quizlet">

        <EditTextPreference
            android:id="@+id/player_name"
            app:key="player_name"
            app:title="@string/title_player_name"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:id="@+id/player_email"
            android:key="player_email"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_email" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_theme">

        <SwitchPreferenceCompat
            android:id="@+id/toggle_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:key="toggle_dark_theme"
            app:title="@string/title_dark_theme" />

    </PreferenceCategory>

</PreferenceScreen>