<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_game_over"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/game_over_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_game_results" />

            <ImageView
                android:id="@+id/show_game_result"
                android:layout_width="match_parent"
                android:layout_height="520dp"
                app:srcCompat="@drawable/ic_launcher_losing_cup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_reset" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>